[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "india-hexmap"
version = "0.1.0"
description = "Draw a hex-tile map of India's states and UTs colored by your own data."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/yourname/india-hexmap"

[project.scripts]
india-hexmap = "india_hexmap.cli:main"

[tool.setuptools.packages.find]
include = ["india_hexmap*"]
